fix: nav icon goes out of view on phone screen
When I scroll up on phine the nav icon goes out view. This is because I
had put some unwanted padding on, which i have now removed.

--- a/src/assets/css/section-one.css
+++ b/src/assets/css/section-one.css
@@ -54,10 +54,6 @@
   box-sizing: border-box;
 }
 
-#section1 .box1 {
-  padding: 20px;
-}
-
 #section1 .box2 {
   background: rgba(29, 29, 29, 0.3);
   border: 2px solid #31f827;
